# open-source

./: .envrc  .eslintrc.yml  .gitignore  .prettierrc  .stylish-haskell.yaml  .travis.yml  .yamllint  BUILD  BUILD.ghc  BUILD.pthread  BUILD.zlib  CHANGELOG.md  LICENSE  Makefile  README.md  Shakefile.hs  WORKSPACE  default.nix  lts-12.14.bzl  nixpkgs.nix  package.yaml  shell.nix  stack.yaml  wai-middleware-rollbar.cabal
.circleci/: cache  config.yml
Shake/: Cabal.hs  Circleci.hs  Dhall.hs  Go.hs  Haskell.hs  JavaScript.hs  Package.hs  Yaml.hs
Shake/Go/: Bin.hs  Build.hs  Format.hs  Lint.hs  Test.hs
Shake/Haskell/: Build.hs  Configure.hs  Executable.hs  Format.hs  Lint.hs  Manifest.hs  Sdist.hs  Test.hs  UploadToHackage.hs  Watch.hs
Shake/JavaScript/: Bin.hs  Build.hs  Copied.hs  Format.hs  Lint.hs  PackageJSON.hs
Shake/Package/: Go.hs  Haskell.hs  JavaScript.hs
golden/: Item () (': Symbol "Authorization" '[]).faulty.json  Item () (': Symbol "Authorization" '[]).json  Item () (': Symbol "Authorization" ('[] Symbol)).faulty.json  Item () (': Symbol "Authorization" ('[] Symbol)).json
nix/: extra_1_6_14.nix  filepattern_0_1_1.nix  rollbar-hs.nix  shake_0_17_7.nix
programs/dhall-go/: go.mod  go.sum  main.go
src/Katip/Scribes/: Rollbar.hs
src/Network/Wai/Middleware/: Rollbar.hs
src/Rollbar/: API.hs  AccessToken.hs  Item.hs
src/Rollbar/Item/: Body.hs  CodeVersion.hs  Data.hs  Environment.hs  Hardcoded.hs  Level.hs  MissingHeaders.hs  Person.hs  Request.hs  Server.hs
test/: Main.hs
test/Rollbar/: Golden.hs  QuickCheck.hs
(+5 files in other folders)
