name:                wai-middleware-rollbar
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/joneshf/wai-middleware-rollbar#readme
license:             BSD3
license-file:        LICENSE
author:              Hardy Jones
maintainer:          jones3.hardy@gmail.com
copyright:           2017 Hardy Jones
category:            Web, Wai
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rollbar.Item
  build-depends:       base >= 4.7 && < 5
                     , aeson >= 1.0 && < 1.1
                     , bytestring >= 0.10 && < 0.11
                     , case-insensitive >= 1.2 && < 1.3
                     , hostname >= 1.0 && < 1.1
                     , http-types >= 0.9 && < 0.10
                     , network >= 2.6 && < 2.7
                     , text >= 1.2 && < 1.3
                     , time >= 1.6 && < 1.7
                     , unordered-containers >= 0.2 && < 0.3
                     , uuid >= 1.3 && < 1.4
                     , wai >= 3.2 && < 3.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joneshf/wai-middleware-rollbar
